--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -3,7 +3,7 @@
 .main-quiz-holder a{text-decoration:none;color:#6C6C6C;}
 .main-quiz-holder .slide-container{width:100%;padding:50px 0px 50pt 0px;}
 .results-container,.intro-container{text-align:center;}
-.results-container{}.main-quiz-holder .slide-container .question,.main-quiz-holder h2.qTitle{margin:10px 0 20px 0;font-size:20px;font-weight:normal;}
+.results-container{}.main-quiz-holder .slide-container .question,.main-quiz-holder h2.qTitle{margin:0 0 20px 0;font-size:20px;font-weight:normal;}
 .main-quiz-holder h2.qTitle{font-size:20px;margin-top:30px; line-height:26px}
 .main-quiz-holder .question-number{position:absolute;right:10px;top:10px;border:1px solid #F6F6F6;padding:5px;background:#F0F0F0;text-shadow:0 1px 0 rgba(255,255,255,0.3);-webkit-box-shadow:inset 0 0 0 1px rgba(255,255,255,0.2),inset 0 0 6px 0 rgba(255,255,255,0.3),0 1px 2px rgba(0,0,0,0.4);-moz-box-shadow:inset 0 0 0 1px rgba(255,255,255,0.2),inset 0 0 6px 0 rgba(255,255,255,0.3),0 1px 2px rgba(0,0,0,0.4);box-shadow:inset 0 0 0 1px rgba(255,255,255,0.2),inset 0 0 6px 0 rgba(255,255,255,0.3),0 1px 2px rgba(0,0,0,0.4);border-radius:3px;color:#949494;}
 .main-quiz-holder .slide-container ul.answers{margin:0px 20px;padding:5px;list-style:none;}
@@ -13,15 +13,15 @@
 .main-quiz-holder .slide-container .next{background:#77d125;box-shadow:0 1px 5px #3caa00,inset 0 10px 20px #c9ffb6;-o-box-shadow:0 1px 5px #3caa00,inset 0 10px 20px #c9ffb6;-webkit-box-shadow:0 1px 5px #3caa00,inset 0 10px 20px #c9ffb6;-moz-box-shadow:0 1px 5px #3caa00,inset 0 10px 20px #c9ffb6;}
 .main-quiz-holder .progress-keeper{width:553px;margin:0px 12px;box-shadow:0 1px 5px #D9D9D9,inset 0 10px 20px #F1F1F1;-o-box-shadow:0 1px 5px #D9D9D9,inset 0 10px 20px #F1F1F1;-webkit-box-shadow:0 1px 5px #D9D9D9,inset 0 10px 20px #F1F1F1;-moz-box-shadow:0 1px 5px #D9D9D9,inset 0 10px 20px #F1F1F1;border-radius:2px;border:1px solid #dedede;margin:0px auto 20px auto;}
 .main-quiz-holder .progress{width:0;height:10px;color:#4c4c4c;background:#f6f6f6;background:-webkit-gradient(linear,left top,left bottom,from(#f6f6f6),to(#d4d4d4));background:-webkit-linear-gradient(#f6f6f6,#d4d4d4);background-image:-moz-linear-gradient(top,#f6f6f6,#d4d4d4);background-image:-moz-gradient(top,#f6f6f6,#d4d4d4);}
-.main-quiz-holder .result-keeper{margin:10px;text-align:center;}
-.main-quiz-holder .notice{margin-top:-30px;color:#717171;position:absolute;right:52px;bottom:70px;}
+.main-quiz-holder .result-keeper{margin:10px auto auto 30px;text-align:center;}
+.main-quiz-holder .notice{color:#DF2121;position:absolute;margin-left: 40%;bottom:18%;}
 .main-quiz-holder .slide-container .prev{width:70px;float:left;margin:auto auto auto 20px}
 .main-quiz-holder .slide-container .next,.main-quiz-holder .slide-container .final{width:70px;float:right;margin:0 20px}
 .main-quiz-holder .slide-container .final{width:65px;}
 .main-quiz-holder .nav-previous{}.main-quiz-holder .nav-next{}.main-quiz-holder .nav-show-result{padding-left:25px;background:url(images/confirm.png) left no-repeat;}
 .main-quiz-holder .nav-start{text-align:center;display:block;margin:40px 40px 40px 40px; line-height:32px; font-size:20px; font-weight:bold}
 .main-quiz-holder .nav-container{padding:5px;margin:15px 0;}
-.main-quiz-holder .result-row{width:80px;margin:10px 20px;float:left;position:relative;}
+.main-quiz-holder .result-row{width:50px;margin:10px 20px;float:left;position:relative;}
 .main-quiz-holder .result-row .resultsview-qhover{background:#FCFCFC;border:1px solid #dedede;box-shadow:0 1px 5px #D9D9D9,inset 0 10px 20px #F1F1F1;-o-box-shadow:0 1px 5px #D9D9D9,inset 0 10px 20px #F1F1F1;-webkit-box-shadow:0 1px 5px #D9D9D9,inset 0 10px 20px #F1F1F1;-moz-box-shadow:0 1px 5px #D9D9D9,inset 0 10px 20px #F1F1F1;border-radius:2px 10px 2px 10px;position:absolute;width:250px;top:50px;left:-80px;z-index:200;padding:15px 30px;text-align:left;font-size:22px;}
 .main-quiz-holder .resultsview-qhover ul{list-style:none;margin:10px 0;}
 .main-quiz-holder .resultsview-qhover li{padding:0 28px;margin:5px 0;min-height:20px;font-size:14px;background: #FCFCFC;border:1px solid #F6F6F6;border-radius:3px;}
